integración frontend-backend y preparar deploy con Docker